# Deep-Learning-Starter

./: .gitignore  README.md  draft.ipynb  pyproject.toml  pyrightconfig.json  requirements.txt  setup.sh
deep_learning_starter/: __init__.py
deep_learning_starter/datapipes/: __init__.py  image_folder.py  imagenet1k.py  url_dataset.py
deep_learning_starter/models/: __init__.py  _utils.py  common_used_pretrained_public_models.py  diffusion_denoising_implicit_model.py  generative_adversarial_network.py  masked_autoencoder.py  variational_autoencoder.py  vector_quantized_vae.py
deep_learning_starter/modules/: __init__.py  absolute_positional_embedding.py  resnet.py  rmsnorm.py  rotary.py  swiglu.py  transformer.py  unet.py
pipelines/: setup_distributed.py  train_diffusion.py  train_generative_model.py  train_mae.py
